# russell

./: AUTHORS  CMakeLists.txt  INSTALL  Jamroot.jam  Makefile.am  Makefile.in  NEWS  README  README.md  aclocal.m4  config  config-ext  config.h.cmake  config.h.in  configure  configure.ac  math-small-1.rus  mdl.pro  metamath  run  run_check  russell.files  russell.includes  tiny-0.rus  transl  transl.sh  translate  translate2  translate3  translate4  translate_deep  translate_deep2  translate_deep3  translate_deep4  uset-25000.mm
include/: Makefile.am  (+35 more)
metamath/: CMakeLists.txt  Makefile.am  Makefile.in  __README.TXT  metamath.c  mmcmdl.c  mmcmds.c  mmdata.h  mmhlpa.c  mminou.h  mmmaci.c  mmmaci.h  mmpars.c  mmpars.h  mmpfas.h  mmunif.c  mmutil.c  mmutil.h  mmveri.c  mmvstr.c  mmwtex.c  mmwtex.h  nf.mm
src/: CMakeLists.txt  Makefile.am  Makefile.in  all.cpp  daem.cpp  location.cpp  main.cpp  memusage.cpp  timer.cpp
src/com/: Makefile.am  Makefile.in  actions.cpp  all.cpp  common.cpp  location.cpp  log.cpp  timer.cpp  xml.cpp
src/cut/: adaptors.hpp  globals.cpp  grammar.hpp  main.cpp  parser.cpp  parser.hpp  show.cpp
src/daem/: Makefile.am  Makefile.in  all.cpp  connect.cpp  daemon.cpp  main.cpp
src/metamath/: Makefile.am  Makefile.in  metamath.c  mmcmdl.h  mmcmds.h  mmdata.c  mmhlpb.c  mminou.c  mmpars.c  mmpfas.c  mmunif.h  mmveri.h  mmvstr.h  peano.mm
src/mm/: Makefile.am  Makefile.in  adaptors.hpp  all.cpp  ast.cpp  cut.cpp  cut_adaptor.hpp  expr.cpp  globals.cpp  grammar.hpp  main.cpp  merge.cpp  mm.pro  mm_ast.cpp  mm_cut.cpp  mm_fixsynt.cpp  mm_inclusions.cpp  mm_lookup.cpp  mm_math_symb.hpp  mm_merge.cpp  mm_parser.cpp  mm_read.cpp  mm_show.cpp  mm_sys.cpp  mm_translate.cpp  mm_translate_smm.cpp  mm_tree.cpp  mm_tree.hpp  mm_verify.cpp  parser.cpp  parser.hpp  peg_parser.cpp  show.cpp  spirit_grammar.hpp  spirit_parser.cpp  spirit_parser.hpp  sys.cpp  translate.cpp  tree.cpp  tree.hpp
src/mm/ctags/: adaptors.hpp  grammar.hpp  parser.cpp  parser.hpp  tags.hpp
src/mm/cut/: adaptors.hpp  ast.hpp  globals.cpp  globals.hpp  grammar.hpp  main.cpp  parser.cpp  parser.hpp  patches.cpp  show.cpp  sys.cpp
src/mm/merge/: ast.hpp  grammar.hpp  parser.cpp  parser.hpp
src/mm/peg_parser/: main.cpp  mm_src.hpp  parser.cpp  parser.hpp  peg_mm.cpp
src/mm2/: mm2_ast.cpp  mm2_cut.cpp  mm2_cut_adaptor.hpp  mm2_inclusions.cpp  mm2_math_symb.hpp  mm2_merge.cpp  mm2_parser.cpp  mm2_read.cpp  mm2_show.cpp  mm2_sys.cpp  mm2_translate.cpp  mm2_translate_smm.cpp  mm2_tree.cpp  mm2_tree.hpp  mm2_verify.cpp
src/rus/: Makefile.am  Makefile.in  adaptors.hpp  all.cpp  ast.cpp  daemon.cpp  expr.cpp  expr_grammar.cpp  expr_grammar.hpp  expr_parser.cpp  globals.cpp  grammar.hpp  main.cpp  memvol.cpp  mm2_ast.hpp  modify_grammar.cpp  monitor.cpp  parser.cpp  parser.hpp  rus_ast.cpp  rus_beautify.cpp  rus_expr.cpp  rus_fixsynt.cpp  rus_grammar.hpp  rus_imports.cpp  rus_lookup.cpp  rus_lookup.hpp  rus_memvol.cpp  rus_parser.cpp  rus_parser.hpp  rus_read.cpp  rus_refactor.cpp  rus_show.cpp  rus_stats.cpp  rus_sys.cpp  rus_test.cpp  rus_translate.cpp  rus_verify.cpp  rus_xml.cpp  show.cpp  (+5 more)
src/rus/expr/: GLR.cpp  GLR.hpp  LR.cpp  LR.hpp  parse.cpp  parser.cpp  rus_expr_parse.cpp  rus_expr_stats.hpp  rus_expr_unify.cpp  show.cpp  table.hpp  unify.cpp
src/rus/parser/: CMakeLists.txt  adaptors.hpp  grammar.hpp  ind.hpp  parse.cpp  parse.hpp  parser.cpp  parser.hpp  rus_parser.cpp  rus_parser.hpp  rus_parser_adaptors.hpp  rus_parser_grammar.hpp
src/rus/prover/: rus_prover.hpp  rus_prover_ass.hpp  rus_prover_beautify.cpp  rus_prover_cartesian.cpp  rus_prover_cartesian.hpp  rus_prover_compare.cpp  rus_prover_decart.hpp  rus_prover_down.cpp  rus_prover_down.hpp  rus_prover_down2.cpp  rus_prover_expr.cpp  rus_prover_expr.hpp  rus_prover_flat_subst.cpp  rus_prover_flat_subst.hpp  rus_prover_flat_term.cpp  rus_prover_flat_term.hpp  rus_prover_index.cpp  rus_prover_index.hpp  rus_prover_index2.cpp  rus_prover_index2.hpp  rus_prover_leafs.hpp  rus_prover_limit.hpp  rus_prover_maker.cpp  rus_prover_maker.hpp  rus_prover_matrix_index.cpp  rus_prover_matrix_index.hpp  rus_prover_multy_index.cpp  rus_prover_multy_index.hpp  rus_prover_multy_subst.cpp  rus_prover_multy_subst.hpp  rus_prover_node.cpp  rus_prover_node.hpp  rus_prover_product_unified.cpp  rus_prover_product_unified.hpp  rus_prover_product_vector.cpp  rus_prover_product_vector.hpp  rus_prover_proof.cpp  rus_prover_proof.hpp  rus_prover_prover.cpp  rus_prover_prover.hpp  (+23 more)
src/rus/prover/index/: rus_prover_index.cpp  rus_prover_index.hpp  rus_prover_index_intersect.cpp  rus_prover_index_intersect2.cpp  rus_prover_index_matrix.cpp  rus_prover_index_matrix.hpp  rus_prover_index_unify.cpp  rus_prover_index_unify.hpp  rus_prover_index_unify_iter.cpp  rus_prover_index_unify_iter.hpp  rus_prover_index_vect_map.hpp  rus_prover_index_vector.hpp  rus_prover_matrix_index.cpp  rus_prover_trie_index.cpp  rus_prover_trie_index.hpp  rus_prover_trie_matrix_index.cpp  rus_prover_trie_matrix_index.hpp  rus_prover_trie_unify.cpp  rus_prover_trie_unify.hpp  (+4 more)
src/rus/transform/: rus_transform_abst_proof_set.cpp  rus_transform_duplicate_steps.cpp  rus_transform_factor_subproofs.cpp  rus_transform_generalization_relation.cpp  rus_transform_generalize_theorems.cpp  rus_transform_insert_theorem.cpp  rus_transform_proof_shortcuts.cpp  rus_transform_rem_dupsteps.cpp  rus_transform_rem_proof_shortcuts.cpp  rus_transform_rem_unused_hyps.cpp  rus_transform_rem_unused_steps.cpp  rus_transform_replace_with_optimal.cpp  rus_transform_unused_hyps.cpp  rus_transform_unused_steps.cpp
src/smm/: Makefile.am  Makefile.in  adaptors.hpp  all.cpp  ast.cpp  expr.cpp  globals.cpp  grammar.hpp  karma.cpp  main.cpp  math_symb.cpp  math_symb.hpp  parser.cpp  parser.hpp  peg_parser.cpp  show.cpp  smm_ast.cpp  smm_math_symb.hpp  smm_parser.cpp  smm_read.cpp  smm_show.cpp  smm_sys.cpp  smm_translate_mm.cpp  smm_translate_rus.cpp  smm_tree.cpp  smm_tree.hpp  smm_verify.cpp  spirit.cpp  sys.cpp  translate.cpp  translate_mm.cpp  translate_rus.cpp  tree.cpp  tree.hpp  verifier.cpp  verify.cpp
(+862 files in other folders)
